# mpi-sdf2opmd

./: .gitignore  CMakeLists.txt  README.md  setup_mpi.sh
sdf2opmd_1d/: CMakeLists.txt
sdf2opmd_1d/converter/: .#sdf2opmd_1d.cxx  CMakeLists.txt  sdf2opmd_1d.cxx  sdf2opmd_1d.h
sdf2opmd_1d/src/: cxxopts.hpp  sdf_interface.f90  sdf_reader.f90
sdf2opmd_2d/: CMakeLists.txt
sdf2opmd_2d/converter/: .#sdf2opmd_2d.cxx.origin  CMakeLists.txt  opmd_read.cpp.bak  sdf2opmd.cxx  sdf2opmd_2d.cxx  sdf2opmd_2d.cxx.bak  sdf2opmd_2d.h
sdf2opmd_2d/merger/: merger_2d.cxx  merger_2d.h
sdf2opmd_2d/reader/: CMakeLists.txt  opmd_reader_2d.cxx
sdf2opmd_2d/src/: sdf_interface.f90  sdf_reader.f90  utils.h
sdf2opmd_3d/: .#CMakeLists.txt  CMakeLists.txt
sdf2opmd_3d/converter/: CMakeLists.txt  sdf2opmd_3d.cxx  sdf2opmd_3d.h
sdf2opmd_3d/merger/: merger_3d.cxx  merger_3d.h
sdf2opmd_3d/src/: sdf_interface.f90  sdf_reader.f90  utils.h
